--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "monorepo-ts",
   "private": true,
   "scripts": {
-    "compile": "tsc -b -i",
+    "compile": "tsc -b",
+    "compile:all": "tsc -b -i",
+    "compile:clean": "tsc -b --clean",
     "compile:watch": "tsc -b -w -i",
     "eslint": "eslint src/**/**.{ts,tsx}",
     "eslint:fix": "eslint src/**/**.{ts,tsx} --fix",
