--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,17 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./bin",
-    "rootDir": "./src",
+    "rootDir": "./packages",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "es2019"
   },
   "files": [
-    "./src/index.ts"
+    "./packages/core/src/index.ts",
+    "./packages/pack1/src/index.ts",
+    "./packages/pack2/src/index.ts",
+    "./packages/pack3/src/index.ts"
   ],
   "references": [
     { "path": "./packages/pack3"  },
