--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "compile:all": "tsc -b -i",
     "compile:clean": "tsc -b --clean",
     "compile:watch": "tsc -b -w -i",
-    "start": "node bin/core/src/index.js",
+    "start:1": "node bin/core1/src/index.js",
+    "start:2": "node bin/core2/src/index.js",
     "start:ts": "node -r ts-node/register/transpile-only src/index.ts"
   },
   "dependencies": {
