--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "target": "es2019"
   },
   "files": [
-    "./packages/core/src/index.ts",
+    "packages/core1/src/index.ts",
+    "packages/core2/src/index.ts",
     "./packages/pack1/src/index.ts",
     "./packages/pack2/src/index.ts",
     "./packages/pack3/src/index.ts"
