--- a/packages/core1/package.json
+++ b/packages/core1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo-ts/core",
+  "name": "@monorepo-ts/core1",
   "version": "1.0.0",
   "main": "bin/index.js",
   "scripts": {
