--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "module": "commonjs",
+    "module": "ES2022",
     "moduleResolution": "node",
     "outDir": "./bin",
     "rootDir": "./packages",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2019"
+    "target": "ES2023"
   },
   "files": [
     "packages/core1/src/index.ts",
