--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
   "compilerOptions": {
-    "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./bin",
-    "rootDir": "./packages",
+    "rootDir": "./core",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "es2019"
   },
   "files": [
-    "packages/core1/src/index.ts",
-    "packages/core2/src/index.ts"
+    "core/core1/src/index.ts",
+    "core/core2/src/index.ts"
   ],
   "references": [
     { "path": "./packages/pack3"  },
