--- a/packages/pack1/tsconfig.json
+++ b/packages/pack1/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "module": "commonjs",
+    "module": "ES2022",
     "moduleResolution": "node",
     "outDir": "./bin",
     "rootDir": "./src",
