--- a/packages/pack1/package.json
+++ b/packages/pack1/package.json
@@ -5,5 +5,6 @@
   "scripts": {
     "compile": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "type": "module"
 }
