--- a/packages/pack3/package.json
+++ b/packages/pack3/package.json
@@ -6,6 +6,7 @@
     "compile": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "dependencies": {
     "uuid": "^11.0.3"
   }
