--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "module": "commonjs",
+    "module": "ES2022",
     "moduleResolution": "node",
     "outDir": "./bin",
     "rootDir": "./core",
